Fix domain page "not found" layout issue

--- a/console-webapp/src/app/domains/domainList.component.scss
+++ b/console-webapp/src/app/domains/domainList.component.scss
@@ -17,7 +17,7 @@
     &__download {
       position: absolute;
       top: 0;
-      right: 0;
+      right: 10px;
     }
   }
 
